# mini-stark

./: .gitignore  Cargo.toml  README.md
examples/: air.rs  fri.rs
scripts/: babybear_arguments.ipynb  fibonacci_air_example.ipynb  merkle_tree.py
src/: air.rs  error.rs  fiatshamir.rs  field.rs  fri.rs  lib.rs  merkle.rs  starks.rs  util.rs
src/fri/: fiatshamir.rs  mod.rs  prover.rs  verifier.rs
tests/: air.rs  e2e.rs  e2e_babybear.rs  e2e_goldilocks.rs
