[package]
name = "starks"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std = "0.5.0"
itertools = "0.14.0"
trpl = "0.2.0"
digest = "0.10.7"

[dev-dependencies]
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"] }
sha2 = "0.10.8"
