[package]
name = "mini-starks"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std = "0.5.0"
nimue = { git = "https://github.com/arkworks-rs/nimue", features = ["ark"] }
itertools = "0.14.0"
trpl = "0.2.0"
digest = "0.10.7"
rand = "0.9.0"
log = "0.4.27"
env_logger = "0.11.8"
error_set = "0.8.5"

[dev-dependencies]
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"] }
sha2 = "0.10.8"
test-log = "0.2.17"
